# rust-c-bindings-playground

./: .gitignore  CMakeLists.txt  main.c
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
